# amuse_template

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml
src/: main.py
src/amuse_template/: __init__.py
